[gd_scene load_steps=3 format=3 uid="uid://b1qt54fmf6kmg"]

[ext_resource type="Script" path="res://UIManager.gd" id="1_d6yus"]
[ext_resource type="Texture2D" uid="uid://bapc075rlgtop" path="res://Assets/frames/coin_anim_f0.png" id="2_m4237"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6yus")

[node name="healthContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 84.0
offset_bottom = 40.0

[node name="pointContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 49.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="pointContainer"]
layout_mode = 2
texture = ExtResource("2_m4237")
expand_mode = 2

[node name="pointsLabel" type="Label" parent="pointContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
